--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -12,7 +12,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="row">
+  <div class="row mb-4">
     <div class="col">
       <a href="{% url 'reply_topic' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
     </div>
