--- a/templates/topics.html
+++ b/templates/topics.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block content %}
-  <div class="row">
+  <div class="row mb-4">
     <div class="col">
         <a href="{% url 'new_topic' board.pk %}" class="btn btn-primary">New topic</a>
     </div>
